--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
+    "framer-motion": "^10.12.14",
+    "lodash": "^4.17.21",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-spinners": "^0.13.8",
+    "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "3.3.2"
   }
 }
